mt remove comments and fix spacing

--- a/blog/blocks/call-to-action/call-to-action.css
+++ b/blog/blocks/call-to-action/call-to-action.css
@@ -55,6 +55,10 @@ main .call-to-action a.button {
 }
 
 /* modal */
+.modal.call-to-action-modal {
+    padding: 0;
+}
+
 .call-to-action-modal main .section > div {
     padding: 0;
 }
@@ -62,11 +66,6 @@ main .call-to-action a.button {
 .call-to-action-modal main .section img {
     border-radius: 20px 20px 0 0;
 }
-  
-/* .call-to-action-modal main {
-    overflow-y: scroll;
-    height: 100%;
-} */
  
 .call-to-action-modal main .section {
     padding: 0;
